# cloud_automation_with_python

./: .gitignore  README.md  pyproject.toml
lecture_1_tasks/: task_1.py  task_2.py  task_3.py
lecture_2_tasks/: task_1.py  task_2.py  task_3.py
lecture_2_tasks/task_4/: .env.example  .gitignore  README.md  pyproject.toml
lecture_2_tasks/task_4/s3_cli/: __init__.py  cli.py  config.py  logging_config.py  s3_manager.py
lecture_3_tasks/: task_1.py  task_2.py  task_3.py  task_4.py
lecture_4_tasks/: task_1.py  task_2.py  task_3.py  task_4.py
lecture_5_tasks/: task_1.py  task_2.py  task_3.py
